--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WhatsApp Bonos</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Meta Pixel Code -->
   <script>
@@ -30,8 +29,8 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #1a1a1a;
-      color: #fff;
+      background: linear-gradient(to bottom right, #e8fff3, #c1f2e1);
+      color: #000;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -44,196 +43,203 @@
     }
 
     .logo-text {
-      color: #D4AF37;
-      font-weight: 700;
-      font-size: 24px;
+      color: #00c853;
+      font-weight: 800;
+      font-size: 28px;
+      text-shadow: 1px 1px 2px #00000022;
     }
 
     hr {
       width: 100%;
       border: none;
-      border-top: 1px solid #444;
+      border-top: 1px solid #ddd;
       margin: 20px 0;
     }
 
     .verified {
       text-align: center;
-    }
-
-    .verified img {
-      width: 100px;
-      border-radius: 50%;
-      margin: 20px 0;
+      margin-top: 10px;
     }
 
     .verified h2 {
-      font-size: 20px;
+      font-size: 22px;
       margin: 10px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
     }
 
     .verified .green {
-      color: #D4AF37;
-      font-weight: 600;
+      color: #00b86b;
+      font-weight: 700;
+      font-size: 18px;
+    }
+
+    .tick {
+      width: 22px;
+      height: 22px;
+    }
+
+    .whatsapp-logo {
+      width: 60px;
+      margin: 10px 0;
     }
 
     .message {
-      background: #2a2a2a;
-      padding: 15px;
-      border-radius: 10px;
+      background: #d6fff0;
+      padding: 18px;
+      border-radius: 12px;
       margin: 20px 0;
       font-size: 16px;
-      color: #fff;
+      font-weight: 500;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      text-align: center;
+    }
+
+    .mensaje-bono {
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      padding: 14px;
+      border-radius: 10px;
+      margin-bottom: 18px;
+      font-weight: 600;
+      color: #856404;
+      font-size: 16px;
+      text-align: center;
     }
 
     .whatsapp-button {
-      background-color: #D4AF37;
-      color: #1a1a1a;
-      padding: 18px 30px;
-      border-radius: 50px;
+      background: linear-gradient(135deg, #00e676, #1de9b6);
+      color: white;
+      padding: 20px 34px;
+      border-radius: 45px;
       font-weight: bold;
       text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
+      display: inline-block;
       font-size: 18px;
-      box-shadow: 0 4px 15px rgba(212, 175, 55, 0.4);
-      border: none;
-      cursor: pointer;
-      position: relative;
-      overflow: hidden;
-      transition: all 0.3s ease;
-      z-index: 1;
-      min-width: 250px;
+      box-shadow: 0 0 15px #25d366;
+      animation: pulse-glow 2s infinite, shine 3s infinite;
+      transition: transform 0.2s, box-shadow 0.2s;
+      text-align: center;
     }
 
-    .whatsapp-button::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #bfa437;
-      z-index: -1;
-      transform: scaleX(0);
-      transform-origin: right;
-      transition: transform 0.3s ease;
+    @keyframes pulse-glow {
+      0%, 100% { box-shadow: 0 0 15px #25d366; }
+      50% { box-shadow: 0 0 30px #00ff99; }
+    }
+
+    @keyframes shine {
+      0% { background-position: -200px; }
+      100% { background-position: 200px; }
     }
 
     .whatsapp-button:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 0 15px #D4AF37, 
-                  0 0 25px rgba(212, 175, 55, 0.6),
-                  0 0 35px rgba(212, 175, 55, 0.3);
-    }
-
-    .whatsapp-button:hover::before {
-      transform: scaleX(1);
-      transform-origin: left;
-    }
-
-    .whatsapp-button:active {
-      transform: translateY(1px);
-    }
-
-    .whatsapp-button i {
-      margin-right: 10px;
-      font-size: 24px;
-    }
-
-    @keyframes pulse {
-      0% {
-        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.7);
-      }
-      70% {
-        box-shadow: 0 0 0 15px rgba(212, 175, 55, 0);
-      }
-      100% {
-        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
-      }
-    }
-
-    .whatsapp-button.pulse {
-      animation: pulse 2s infinite;
+      transform: scale(1.05);
+      box-shadow: 0 0 25px #00ff99;
     }
 
     .clientes {
-      background-color: #444;
-      color: #fff;
+      background-color: #00c9a7;
+      color: white;
       padding: 12px 20px;
       border-radius: 30px;
       font-weight: 600;
-      margin-bottom: 10px;
+      margin: 14px 0;
+      text-align: center;
     }
 
     .trustpilot {
       font-size: 14px;
-      padding: 8px 15px;
-      border: 1px dashed #999;
+      padding: 10px;
+      border: 1px dashed #aaa;
       border-radius: 10px;
       margin-bottom: 10px;
       text-align: center;
-      color: #ccc;
+      background: #ffffffaa;
     }
 
     .trustpilot img {
       margin-top: 5px;
-      max-width: 120px;
+      max-width: 130px;
     }
 
     .footer {
       position: fixed;
       bottom: 0;
       width: 100%;
-      background: linear-gradient(to right, #bfa437, #D4AF37);
-      color: #1a1a1a;
+      background: linear-gradient(to right, #00d084, #25d366);
+      color: white;
       text-align: center;
-      padding: 10px;
+      padding: 12px;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 15px;
+    }
+
+    .notificacion {
+      position: fixed;
+      bottom: 110px;
+      left: 10px;
+      background: #222;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 10px;
+      font-size: 11px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      animation: fadeinout 6s infinite;
+    }
+
+    @keyframes fadeinout {
+      0%,100% { opacity: 0; transform: translateY(10px); }
+      10%,90% { opacity: 1; transform: translateY(0); }
+    }
+
+    .notificacion img {
+      width: 30px;
+      height: 30px;
+      border-radius: 8px;
+      margin-right: 8px;
     }
 
     @media (max-width: 600px) {
-      .whatsapp-button {
-        font-size: 16px;
-        padding: 16px 25px;
-        min-width: 220px;
-      }
-      .clientes {
-        font-size: 14px;
-        padding: 12px 18px;
-      }
-      .message {
-        font-size: 14px;
-      }
+      .logo-text { font-size: 22px; }
+      .verified h2 { font-size: 18px; }
+      .message, .mensaje-bono, .clientes, .whatsapp-button { font-size: 15px; padding: 14px; }
+      .footer { font-size: 13px; }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo-text">WhatsApp Bonos</div>
+    <div class="logo-text">🎰 WhatsApp Bonos</div>
+    <img class="whatsapp-logo" src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Logo" />
   </header>
 
   <hr />
 
   <section class="verified">
-    <a href="https://wa.me/5492235526026" target="_blank" onclick="fbq('trackCustom', 'ClickWhatsApp')">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" width="50" height="50" />
-    </a>
-    <h2>✅ <b>Plataforma Verificada</b> ✅</h2>
-    <p class="green">Casino de Confianza</p>
+    <h2>
+      ✅ Plataforma Verificada
+      <img class="tick" src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Twitter_Verified_Badge.svg" alt="Verificado" />
+    </h2>
+    <p class="green">💸 Bono Activo: ¡Bono con tu primer carga!</p>
   </section>
 
   <div class="message">
-    Te estamos conectando con nuestro equipo vía WhatsApp.
+    Te estamos conectando con nuestro equipo vía WhatsApp 📲
   </div>
 
-  <a class="whatsapp-button pulse" 
-     href="https://wa.me/5492235526026?text=Quiero%20mi%20bono%20de%20bienvenida" 
+  <div class="mensaje-bono">
+    💥 Si cargas $1000 te damos $1500 💥<br/>🎯 ¡Bono con tu primer carga!
+  </div>
+
+  <a class="whatsapp-button" 
+     href="https://wa.me/5492235526026?text=hola%20quiero%20jugar%20con%20mi%20bon0%"  
      target="_blank"
      onclick="fbq('trackCustom', 'ClickWhatsApp')">
-    <i class="fab fa-whatsapp"></i> ¡QUIERO MI BONO!
+    📲 ¡QUIERO MI BONO!
   </a>
 
   <div class="clientes">
@@ -245,20 +251,39 @@
     <img src="https://logowik.com/content/uploads/images/trustpilot-stars9095.jpg" alt="Trustpilot" />
   </div>
 
+  <div class="notificacion" id="notificacion">
+    <img src="https://cdn-icons-png.flaticon.com/512/854/854894.png" alt="usuario" />
+    <div id="noti-text"></div>
+  </div>
+
   <div class="footer">
-    🎁 BONO ACTIVO - ¡Solicítalo ahora por WhatsApp!
+    🎁 ¡BONO ACTIVO! — ¡Bono de bienvenida con tu primer carga!
   </div>
 
   <script>
-    const whatsappBtn = document.querySelector('.whatsapp-button');
-    if(whatsappBtn) {
-      whatsappBtn.addEventListener('mouseenter', function() {
-        this.style.transform = 'scale(1.05)';
-      });
-      whatsappBtn.addEventListener('mouseleave', function() {
-        this.style.transform = 'scale(1)';
-      });
+    const premios = [
+      { nombre: "Mario", monto: "$10.000", ciudad: "Buenos Aires", tiempo: "hace 1 min" },
+      { nombre: "Laura", monto: "$5.500", ciudad: "Córdoba", tiempo: "hace 2 min" },
+      { nombre: "Carlos", monto: "$8.200", ciudad: "Rosario", tiempo: "hace 3 min" },
+      { nombre: "Sofía", monto: "$15.000", ciudad: "Mendoza", tiempo: "hace 4 min" },
+      { nombre: "Pedro", monto: "$7.300", ciudad: "Tucumán", tiempo: "hace 5 min" },
+      { nombre: "Ana", monto: "$12.500", ciudad: "Salta", tiempo: "hace 6 min" },
+    ];
+
+    let indice = 0;
+    function actualizarNotificacion() {
+      const notiText = document.getElementById("noti-text");
+      const premio = premios[indice % premios.length];
+      notiText.innerHTML = `
+        <strong>${premio.nombre}</strong><br />
+        🎁 Reclamó su premio de ${premio.monto}<br />
+        📍 Desde ${premio.ciudad} • ${premio.tiempo}
+      `;
+      indice++;
     }
+
+    setInterval(actualizarNotificacion, 10000);
+    actualizarNotificacion();
   </script>
 </body>
 </html>
